hopefully fix legend formatting issue on mobile

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -53,9 +53,13 @@ body {
     line-height: 18px;
     color: #555;
 }
+.legend span {
+    display: block;
+    height: 18px;
+}
 .legend i {
     width: 18px;
-    height: 18px;
+    height: 100%;
     float: left;
     margin-right: 8px;
     opacity: 0.7;
